--- a/tests/tests.html
+++ b/tests/tests.html
@@ -18,7 +18,7 @@
 
 <div id="panorama"></div>
 <script>
-viewer = pannellum.viewer('panorama', ﻿{
+viewer = pannellum.viewer('panorama', {
     "default": {
         "author": "testauthor",
         "firstScene": "equirectangular",
